# SAP

./: .gitignore  pyproject.toml
distill-sap/: eval_distill.py
distill-sap/scripts/: train.sh
sap/: agent.py  strategy.py
sap/configs/: sap.yaml
sap/data/: expert_strategy.json  expert_strategy2.json
sap/experiments/: eval_vanilla_sap.py
sap/experiments/plots/: action_distribution.json  metric_data.json  plan_dist.json  plot_action_dist.py  plot_against_bots.py  plot_pay_off_martix.py  plot_plan_dist.py  plot_sen_eval.py  plot_strategy_dist.py
sap/offline/: payoff_net.py
sap/templates/: gen_strategy.yaml  planner.yaml  sap_distill_cot.py
skill_rts/: hello_world.py
skill_rts/agents/: llm_clients.py
