[project]
name = "sap"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.4"
dependencies = [
    "gym==0.23.1",
    "joblib==1.4.2",
    "jpype1==1.5.0",
    "lightgbm==4.5.0",
    "matplotlib==3.9.2",
    "numpy==1.26.4",
    "omegaconf==2.3.0",
    "openai==1.52.1",
    "pandas==2.2.3",
    "pillow==11.0.0",
    "pyyaml==6.0.2",
    "scikit-learn==1.5.2",
    "scikit-plot==0.3.7",
    "scipy==1.11.4",
    "seaborn==0.13.2",
    "stable-baselines3==1.1.0",
    "torch==2.5.0",
    "wandb==0.18.5",
    "zhipuai==2.1.5.20230904",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[dependency-groups]
dev = [
    "deepspeed>=0.16.9",
    "liger-kernel>=0.5.10",
    "ms-swift>=3.4.1.post1",
    "swanlab>=0.6.0",
]
